# saga-rs

./: .env  Cargo.toml  docker-compose.yml
services/customer-service/: Cargo.toml
services/customer-service/migrations/: 001_customer_schema.sql
services/customer-service/src/: consumer.rs  db.rs  error.rs  lib.rs  main.rs  types.rs
services/order-service/: Cargo.toml
services/order-service/migrations/: 002_order_schema.sql
services/order-service/src/: db.rs  error.rs  lib.rs  orchestrator.rs  types.rs
shared/: Cargo.toml
shared/src/: ids.rs  lib.rs  money.rs  saga.rs
