[workspace]
resolver = "2"
members  = [
    "shared",
    "services/order-service",
    "services/customer-service",
]

[workspace.dependencies]
tokio      = { version = "1", features = ["full"] }
sqlx       = { version = "0.8", features = [
    "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate",
] }
rdkafka    = { version = "0.36", features = ["cmake-build", "tokio"] }
axum       = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["trace"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
chrono     = { version = "0.4", features = ["serde"] }
thiserror  = "2"
anyhow     = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy    = "0.15"
shared     = { path = "shared" }
