[package]
name    = "customer-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "customer-service"
path = "src/main.rs"

[lib]
name = "customer_service"
path = "src/lib.rs"

[dependencies]
shared     = { workspace = true }
tokio      = { workspace = true }
sqlx       = { workspace = true }
rdkafka    = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }