[package]
name    = "order-service"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "order-service"
path = "src/main.rs"

[lib]
name = "order_service"
path = "src/lib.rs"

[dependencies]
shared     = { workspace = true }
tokio      = { workspace = true }
sqlx       = { workspace = true }
rdkafka    = { workspace = true }
axum       = { workspace = true }
tower-http = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy    = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }